update surefire in policy to M5, few warnings
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>