@@ -79,10 +79,10 @@
         <spotbugs.exclude>${project.basedir}/exclude.xml</spotbugs.exclude>
         <spotbugs.skip>false</spotbugs.skip>
         <spotbugs.threshold>Low</spotbugs.threshold>
-        <spotbugs.version>4.5.3.0</spotbugs.version>
+        <spotbugs.version>4.6.0.0</spotbugs.version>
 
         <maven.compiler.release>11</maven.compiler.release>
-        <maven.compiler.testRelease>11</maven.compiler.testRelease>
+        <maven.compiler.testRelease>${maven.compiler.release}</maven.compiler.testRelease>
 
         <!-- exclude big groups from the Xlint -->
         <comp.xlint>-Xlint:all,-rawtypes,-unchecked</comp.xlint>
@@ -100,7 +100,7 @@
 
         <jaxb.version>4.0.0-M4</jaxb.version>
         <junit.version>4.13.2</junit.version>
-        <istack.version>4.1.0</istack.version>
+        <istack.plugin.version>4.1.0</istack.plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -150,7 +150,7 @@
                 <plugin>
                     <groupId>com.sun.istack</groupId>
                     <artifactId>istack-commons-maven-plugin</artifactId>
-                    <version>${istack.version}</version>
+                    <version>${istack.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -205,7 +205,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M4</version>
+                    <version>3.0.0-M5</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -261,10 +261,6 @@
                         <id>default-testCompile</id>
                         <configuration>
                             <compilerArgs>
-                                <arg>--add-modules</arg>
-                                <arg>junit</arg>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.xml.ws.policy=junit</arg>
                                 <arg>${comp.test.xlint}</arg>
                                 <arg>${comp.test.xdoclint}</arg>
                                 <arg>-Xmaxwarns</arg>
